--- a/index.html
+++ b/index.html
@@ -9,19 +9,20 @@
 </head>
 <body>
   <div class="main">
-      <div class="mount">
-        <img src="./img/mountains.png" alt="">
-      </div>
-      <div class="points">
-        <div class="pnt" id="p-1"></div>
-        <div class="pnt" id="p-2"></div>
-        <div class="pnt" id="p-3"></div>
-        <div class="pnt" id="p-4"></div>
-        <div class="pnt" id="p-5"></div>
-        <div class="pnt" id="p-6"></div>
-        <div class="pnt" id="p-7"></div>
-      </div>
-      <div class="climber"></div>
+    <div class="mount">
+      <div class="steps">TOTAL STEPS: </div>
+      <img src="./img/mountains.png" alt="">
+    </div>
+    <div class="points">
+      <div class="pnt" id="p-1"></div>
+      <div class="pnt" id="p-2"></div>
+      <div class="pnt" id="p-3"></div>
+      <div class="pnt" id="p-4"></div>
+      <div class="pnt" id="p-5"></div>
+      <div class="pnt" id="p-6"></div>
+      <div class="pnt" id="p-7"></div>
+    </div>
+    <div class="climber"></div>
   </div>
   <script src="./index.js"></script>
   
